@@ -3,19 +3,12 @@ import org.jetbrains.dokka.gradle.DokkaExtension
 plugins {
     id("com.kelvsyc.internal.dokka")
     id("com.kelvsyc.internal.jacoco")
-    id("com.kelvsyc.internal.kotlin-plugin")
+    id("com.kelvsyc.internal.kotlin-gradle-library")
     id("com.kelvsyc.internal.github-publishing")
 }
 
 configure<DokkaExtension> {
     moduleName.set("Bitbucket Data Center Base")
-}
-
-gradlePlugin {
-    plugins.register("bitbucket-data-center-base") {
-        id = "com.kelvsyc.gradle.bitbucket-data-center-base"
-        implementationClass = "com.kelvsyc.gradle.plugins.BitbucketDataCenterBasePlugin"
-    }
 }
 
 dependencies {
@@ -28,4 +21,9 @@ dependencies {
     implementation(libs.retrofit.converter.moshi)
 
     testImplementation(libs.mockk)
+}
+
+tasks.test {
+    // FIXME https://github.com/gradle/gradle/issues/18647
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
